--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@rainbow-me/rainbowkit": "^0.4.2",
     "daisyui": "^2.19.0",
     "ethers": "^5.6.9",
+    "framer-motion": "^6.5.1",
     "next": "12.2.2",
     "react": "18.2.0",
     "react-daisyui": "^2.0.6",
     "react-dom": "18.2.0",
+    "react-icons": "^4.4.0",
     "wagmi": "^0.5.9"
   },
   "devDependencies": {
