--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "wagmi": "^0.5.9"
   },
   "devDependencies": {
+    "@tailwindcss/typography": "^0.5.4",
     "@types/node": "18.0.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
