--- a/package.json
+++ b/package.json
@@ -18,6 +18,8 @@
     "react-daisyui": "^2.0.6",
     "react-dom": "18.2.0",
     "react-icons": "^4.4.0",
+    "react-infinite-scroller": "^1.2.6",
+    "react-query": "^4.0.0-beta.23",
     "wagmi": "^0.5.9"
   },
   "devDependencies": {
@@ -25,6 +27,7 @@
     "@types/node": "18.0.4",
     "@types/react": "18.0.15",
     "@types/react-dom": "18.0.6",
+    "@types/react-infinite-scroller": "^1.2.3",
     "autoprefixer": "^10.4.7",
     "eslint": "8.19.0",
     "eslint-config-next": "12.2.2",
