--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@headlessui/react": "^1.6.6",
     "@rainbow-me/rainbowkit": "^0.4.2",
     "daisyui": "^2.19.0",
     "ethers": "^5.6.9",
