--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "ethers": "^5.6.9",
     "framer-motion": "^6.5.1",
     "next": "12.2.2",
+    "next-seo": "^5.4.0",
     "react": "18.2.0",
     "react-daisyui": "^2.0.6",
     "react-dom": "18.2.0",
